--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,6 @@ jobs:
           pip install pytest
       - name: Run tests
         run: |
+          git fetch origin hidden-tests:hidden-tests
+          git checkout hidden-tests -- tests
           pytest
