--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,22 @@
-name: Autograding
+name: Autograding R Assignment
 
 on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-      - name: Run tests
-        run: |
-          git fetch origin hidden-tests:hidden-tests
-          git checkout hidden-tests -- tests
-          pytest
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up R
+      uses: r-lib/actions/setup-r@v2
+
+    - name: Install testthat
+      run: |
+        Rscript -e 'install.packages("testthat")'
+
+    - name: Run tests
+      run: |
+        Rscript -e 'testthat::test_dir("tests")'
